refactor: update Info class to improve tag metrics handling and export functionality